force-app/main/default/objects/Kicker_Incentive__c/Kicker_Incentive__c.object-meta.xml
<CustomObject>
    <label>Kicker Incentive</label>
    <nameField>
        <label>Kicker Incentive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kicker Incentives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>