force-app/main/default/objects/Kicker_Incentive__c/fields/Brokerage_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Scheme__c</fullName>
    <label>Brokerage Scheme</label>
    <referenceTo>Brokerage_Scheme__c</referenceTo>
    <relationshipLabel>Kicker Incentives</relationshipLabel>
    <relationshipName>Kicker_Incentives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>