force-app/main/default/objects/Kicker_Incentive__c/fields/Kicker_Incentive_Unique_No__c.field-meta.xml
<CustomField>
    <fullName>Kicker_Incentive_Unique_No__c</fullName>
    <displayFormat>KI-{000000}</displayFormat>
    <label>Kicker Incentive Unique No.</label>
    <type>AutoNumber</type>
</CustomField>