force-app/main/default/objects/Kicker_Incentive__c/fields/Per_Deal__c.field-meta.xml
<CustomField>
    <fullName>Per_Deal__c</fullName>
    <label>Per Deal %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>