force-app/main/default/objects/Kicker_Incentive__c/fields/Per_Deal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Per_Deal_Amount__c</fullName>
    <label>Per Deal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>