force-app/main/default/objects/Kicker_Incentive__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Kicker Incentives</relationshipLabel>
    <relationshipName>Kicker_Incentives</relationshipName>
    <type>Lookup</type>
</CustomField>