force-app/main/default/objects/Kicker_Incentive__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Kicker Incentives</relationshipLabel>
    <relationshipName>Kicker_Incentives</relationshipName>
    <type>Lookup</type>
</CustomField>