force-app/main/default/objects/Kicker_Incentive__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit Typology</fullName>
            </value>
            <value>
                <fullName>Cumulative</fullName>
            </value>
            <value>
                <fullName>Per Deal</fullName>
            </value>
            <value>
                <fullName>Per Deal %</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>