force-app/main/default/objects/Kicker_Incentive__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C01</fullName>
                <label>C Basement Parking</label>
            </value>
            <value>
                <fullName>C02</fullName>
                <label>C Stilt Parking</label>
            </value>
            <value>
                <fullName>C03</fullName>
                <label>C Podium Parking</label>
            </value>
            <value>
                <fullName>C04</fullName>
                <label>C Open Parking</label>
            </value>
            <value>
                <fullName>C05</fullName>
                <label>C Double Podium Parking</label>
            </value>
            <value>
                <fullName>C06</fullName>
                <label>C Double Stilt Parking</label>
            </value>
            <value>
                <fullName>C07</fullName>
                <label>C Double Open Parking</label>
            </value>
            <value>
                <fullName>C08</fullName>
                <label>C Stilt + open Parking</label>
            </value>
            <value>
                <fullName>C09</fullName>
                <label>C Double stilt +open parking</label>
            </value>
            <value>
                <fullName>C10</fullName>
                <label>C Stilt + double open Parking</label>
            </value>
            <value>
                <fullName>C11</fullName>
                <label>C Triple stilt parking</label>
            </value>
            <value>
                <fullName>C12</fullName>
                <label>C Triple podium Parking</label>
            </value>
            <value>
                <fullName>C13</fullName>
                <label>C Triple open Parking</label>
            </value>
            <value>
                <fullName>C14</fullName>
                <label>C Bare Shell</label>
            </value>
            <value>
                <fullName>C15</fullName>
                <label>C Warm Shell</label>
            </value>
            <value>
                <fullName>C16</fullName>
                <label>Warm Shell with fit outs</label>
            </value>
            <value>
                <fullName>C17</fullName>
                <label>Tandem Parking</label>
            </value>
            <value>
                <fullName>C18</fullName>
                <label>Single Covered</label>
            </value>
            <value>
                <fullName>C19</fullName>
                <label>MLCP</label>
            </value>
            <value>
                <fullName>C20</fullName>
                <label>Single Open</label>
            </value>
            <value>
                <fullName>R01</fullName>
                <label>1BHK</label>
            </value>
            <value>
                <fullName>R02</fullName>
                <label>1 ½ BHK</label>
            </value>
            <value>
                <fullName>R03</fullName>
                <label>2BHK</label>
            </value>
            <value>
                <fullName>R04</fullName>
                <label>2 BHK Large</label>
            </value>
            <value>
                <fullName>R05</fullName>
                <label>2 BHK Small</label>
            </value>
            <value>
                <fullName>R06</fullName>
                <label>2 ½ BHK</label>
            </value>
            <value>
                <fullName>R07</fullName>
                <label>3 BHK</label>
            </value>
            <value>
                <fullName>R08</fullName>
                <label>3 BHK Large</label>
            </value>
            <value>
                <fullName>R09</fullName>
                <label>3 BHK Small</label>
            </value>
            <value>
                <fullName>R10</fullName>
                <label>3 ½ BHK</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>