force-app/main/default/objects/Kicker_Incentive__c/recordTypes/Cumulative.recordType-meta.xml
<RecordType>
    <fullName>Cumulative</fullName>
    <active>true</active>
    <label>Cumulative</label>
</RecordType>