force-app/main/default/objects/Kicker_Incentive__c/recordTypes/Per_Deal_Kicker.recordType-meta.xml
<RecordType>
    <fullName>Per_Deal_Kicker</fullName>
    <active>true</active>
    <label>Per Deal Kicker</label>
</RecordType>