force-app/main/default/objects/Kicker_Incentive__c/recordTypes/Unit_Typology.recordType-meta.xml
<RecordType>
    <fullName>Unit_Typology</fullName>
    <active>true</active>
    <label>Unit Typology</label>
</RecordType>