force-app/main/default/objects/Kicker_Incentive__c/validationRules/If_RT_per_deal_then_per_deal_amount_req.validationRule-meta.xml
<ValidationRule>
    <fullName>If_RT_per_deal_then_per_deal_amount_req</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL(Type__c,&apos;Per Deal&apos;), ISBLANK( Per_Deal_Amount__c ), False)</errorConditionFormula>
    <errorDisplayField>Per_Deal_Amount__c</errorDisplayField>
    <errorMessage>Per Deal Amount Should not be blank.</errorMessage>
</ValidationRule>