force-app/main/default/objects/Kicker_Incentive__c/validationRules/If_Type_per_deal_then_per_deal_Per_req.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Type_per_deal_then_per_deal_Per_req</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL(Type__c,&apos;Per Deal %&apos;), ISBLANK( Per_Deal__c ), False)</errorConditionFormula>
    <errorDisplayField>Per_Deal__c</errorDisplayField>
    <errorMessage>Per Deal %  Should not be blank.</errorMessage>
</ValidationRule>