force-app/main/default/objects/Kicker_Incentive__c/validationRules/Type_per_deal_amt_per_deal_per_not_req.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_per_deal_amt_per_deal_per_not_req</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL(Type__c,&apos;Per Deal&apos;), NOT(ISBLANK(Per_Deal__c)), False)</errorConditionFormula>
    <errorDisplayField>Per_Deal__c</errorDisplayField>
    <errorMessage>Per Deal % should be blank.</errorMessage>
</ValidationRule>