force-app/main/default/objects/Kicker_Incentive__c/validationRules/Type_per_deal_then_per_deal_amt_not_req.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_per_deal_then_per_deal_amt_not_req</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL(Type__c,&apos;Per Deal %&apos;), NOT(ISBLANK(Per_Deal_Amount__c)), False)</errorConditionFormula>
    <errorDisplayField>Per_Deal_Amount__c</errorDisplayField>
    <errorMessage>Per Deal Amount should be blank.</errorMessage>
</ValidationRule>