force-app/main/default/objects/Kicker_Incentive__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Is_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>